# marketpulse

./: .env  .gitignore  Dockerfile.api  Dockerfile.dashboard  LICENSE  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  smoke_test_api.py  smoke_test_cache_scheduler.py  smoke_test_ingestion.py  smoke_test_ml.py  smoke_test_processing.py
.github/workflows/: ci.yml  docker.yml
dashboard/: app.py
marketpulse/: config.py
marketpulse/api/: dependencies.py  main.py  middleware.py
marketpulse/api/routers/: health.py  news.py  signals.py  stocks.py
marketpulse/cache/: __init__.py  redis_client.py
marketpulse/db/: __init__.py  models.py  session.py
marketpulse/db/migrations/: env.py  script.py.mako
marketpulse/db/migrations/versions/: 0001_initial.py
marketpulse/ingestion/: __init__.py  news.py  schemas.py  stock.py
marketpulse/ml/: __init__.py  anomaly.py  classifier.py  features.py  service.py
marketpulse/processing/: __init__.py  etl.py  indicators.py
marketpulse/scheduler/: __init__.py  jobs.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_cache.py  test_db.py  test_ingestion.py  test_ml.py  test_processing.py  test_scheduler.py
