# pyproject.toml
# The single source of truth for project metadata, dependencies, and tool config.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketpulse"
version = "0.1.0"
description = "Stock market intelligence pipeline and dashboard"
requires-python = ">=3.11"
dependencies = [
    # ── Web API ────────────────────────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",   # ASGI server that runs FastAPI
    "pydantic>=2.7.0",             # data validation (rewritten in Rust, v2)
    "pydantic-settings>=2.3.0",    # reads config from environment variables
    # ── Database ───────────────────────────────────────────────────────────
    "sqlalchemy>=2.0.30",          # ORM: Python objects ↔ SQL rows
    "alembic>=1.13.0",             # schema migrations (git for your DB)
    "psycopg2-binary>=2.9.9",      # PostgreSQL driver (binary = no C compiler needed)
    # ── Cache ──────────────────────────────────────────────────────────────
    "redis>=5.0.4",                # Redis client for Python
    # ── Scheduler ──────────────────────────────────────────────────────────
    "apscheduler>=3.10.4",         # in-process cron-style job scheduler
    # ── Data Ingestion ─────────────────────────────────────────────────────
    "yfinance>=0.2.40",            # Yahoo Finance stock data (free, no API key)
    "feedparser>=6.0.11",          # RSS/Atom feed parser
    "nltk>=3.8.1",                 # Natural Language Toolkit (provides VADER)
    # ── Data Processing & ML ───────────────────────────────────────────────
    "pandas>=2.2.2",               # tabular data (DataFrames)
    "numpy>=1.26.4",               # numerical computing (arrays)
    "scikit-learn>=1.5.0",         # ML: RandomForest, IsolationForest, StandardScaler
    "joblib>=1.4.2",               # model serialisation (.pkl files)
    # ── Dashboard & HTTP ───────────────────────────────────────────────────
    "streamlit>=1.36.0",           # Python-native dashboard framework
    "plotly>=5.22.0",              # interactive charts (candlestick, scatter)
    "httpx>=0.27.0",               # HTTP client (used by dashboard to call API)
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",                 # linter + formatter (replaces flake8+black+isort)
    "mypy>=1.10.0",                # static type checker
    "types-redis>=4.6.0",          # type stubs for redis-py
]
test = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",           # coverage reporting
    "pytest-mock>=3.14.0",         # mock/patch helpers for pytest
    "pytest-asyncio>=0.23.7",      # test async functions with pytest
]

# Ruff: linter + formatter 
[tool.ruff]
target-version = "py311"
line-length = 88                   # same as black's default
exclude = [
    "smoke_test_*.py",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "E501",   # line too long — handled by ruff format
    "B008",   # function call in default argument — needed for FastAPI Depends()
]

[tool.ruff.format]
quote-style = "double"             # consistent with black
indent-style = "space"

# mypy: static type checker 
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true      # don't error on third-party libs without stubs
warn_return_any = true
warn_unused_configs = true

# pytest: test runner 
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"              # auto-detect async test functions

# coverage: what to measure 
[tool.coverage.run]
source = ["marketpulse"]
omit = [
    "tests/*",
    "*/migrations/*",              # alembic auto-generated scripts
    "marketpulse/db/migrations/*",
]

[tool.coverage.report]
show_missing = true                # print line numbers of uncovered lines

[tool.hatch.build.targets.wheel]
packages = ["marketpulse"]

